# Vizion3D

./: .gitattributes  Application.cpp  Application.h  CMakeLists.txt  README.md  ResourceManager.cpp  ResourceManager.h  SECURITY.md  main.cpp  resources.txt  stb_image.h  tiny_obj_loader.h  webgpu-utils.cpp  webgpu-utils.h
WebGPU/: webgpu-utils.cpp  webgpu.cmake
resources/: shader.wgsl
